[project]
name = "jovi_colorizer"
description = "Colorize ComfyUI nodes with defaults per node, node category or via regex filtering."
version = "1.0.2"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Colorizer"
Documentation = "https://github.com/Amorano/Jovi_Colorizer/wiki"
Repository = "https://github.com/Amorano/Jovi_Colorizer"
Issues = "https://github.com/Amorano/Jovi_Colorizer/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Colorizer"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_colorizer.png"
